Re-added the Tab page content "shift", and fixed the "grey" background on Simplyxxx and Wood Themes, when Navigator pinned.
git-svn-id: svn://svn.webtrees.net/branches/phpGedView-ca@6365 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/themes/simplyblue/jquery/jquery-ui_theme.css
+++ b/themes/simplyblue/jquery/jquery-ui_theme.css
@@ -1,7 +1,7 @@
 /* jquery css THEME adjustments */
 
 /* Tabs --------------------------------*/
-.ui-widget-content 						 { color:white; background:#999999; border-color:#bbbbbb;  }
+.ui-widget-content 						 { color:white; background:#002540; border-color:#bbbbbb;  }
 .ui-widget-content a 					 { color:#bbbbff; }
 .ui-widget-content a:hover 				 { color:orange; }
 
