--- a/themes/wood/jquery/jquery-ui_theme.css
+++ b/themes/wood/jquery/jquery-ui_theme.css
@@ -1,7 +1,7 @@
 /* jquery css THEME adjustments */
 
 /* Tabs --------------------------------*/
-.ui-widget-content 						 { color:black; border-color:#999999;  }
+.ui-widget-content 						 { color:black; background:#faf0e4; border-color:#999999;  }
 .ui-widget-content a 					 { color:#444455; }
 .ui-widget-content a:hover 				 { color:red; }
 
